// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`include\` option matches snapshot for a single \`include\` value ({RegExp}): assets 1`] = `
Array [
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "async.async.js.gz?ver=a2650528660eba75b74e",
    171,
  ],
  Array [
    "async.async.js?ver=a2650528660eba75b74e",
    249,
  ],
  Array [
    "main.js.gz?var=a2650528660eba75b74e",
    2959,
  ],
  Array [
    "main.js?var=a2650528660eba75b74e",
    11112,
  ],
]
`;

exports[`when applied with \`include\` option matches snapshot for a single \`include\` value ({RegExp}): errors 1`] = `Array []`;

exports[`when applied with \`include\` option matches snapshot for a single \`include\` value ({RegExp}): warnings 1`] = `Array []`;

exports[`when applied with \`include\` option matches snapshot for multiple \`include\` values ({Array<RegExp>}): assets 1`] = `
Array [
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    393,
  ],
  Array [
    "async.async.js.gz?ver=a2650528660eba75b74e",
    171,
  ],
  Array [
    "async.async.js?ver=a2650528660eba75b74e",
    249,
  ],
  Array [
    "main.js.gz?var=a2650528660eba75b74e",
    2959,
  ],
  Array [
    "main.js?var=a2650528660eba75b74e",
    11112,
  ],
]
`;

exports[`when applied with \`include\` option matches snapshot for multiple \`include\` values ({Array<RegExp>}): errors 1`] = `Array []`;

exports[`when applied with \`include\` option matches snapshot for multiple \`include\` values ({Array<RegExp>}): warnings 1`] = `Array []`;
